# spotify-vs-lastfm

./: .gitignore  README.md  compare.py  extract.py  lastfm.csv  lastfm.txt  main.py  main2.py  multi_compare.py  outline.md  plots.py  post.md  pyproject.toml  pyrightconfig.json  requirements.txt  spotify.csv
archive/: main.py
data/: lastfm.csv  lastfm25.csv  lastfm25.txt  min_distance_spority.csv  random.csv  spotify.txt  spotify25.csv  spotify25_exported.csv  spotify_from_extened_data.csv  spotify_from_extened_data_2025.csv  spotify_from_extened_data_2025_raw.csv  spotify_shuffeled.csv  spotify_swapped.csv  spotify_top100_tracks.csv
dev/: find_best_end_date.py  look_for_better_end_date.py  temp.py  test_runtime_compare.py
tests/: test_compare.py  test_main.py  test_plots.py
writing/: blogging.md  final.md  new.md  post.md
