[project]
name = "spotify-vs-lastfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "editdistance>=0.8.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "tabulate>=0.9.0",
]

[tool.ruff]
exclude = ["venv", ".venv", "__pycache__"]  # Optional, to exclude venv files
ignore = [
    "ANN001",  # Missing type annotation for function argument
    "ANN002",  # Missing type annotation for function return value
    "ANN003",  # Missing type annotation for variable
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
